--- a/umcs.html
+++ b/umcs.html
@@ -1,7 +1,7 @@
 ---
 title: Unified MemoryCard Setup
 subtitle: Unified MemoryCard Setup
-layout: umcs/umcslist-category
+layout: umcslist-category
 show_sidebar: false
 hide_hero: true
 sort: app_code
