--- a/umcs.html
+++ b/umcs.html
@@ -4,6 +4,7 @@ subtitle: Unified MemoryCard Setup
 layout: umcslist-category
 show_sidebar: false
 hide_hero: true
+sort: umcs_code
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/ps2wiki_branding-1.png?raw=true
 ---
 
