--- a/umcs.html
+++ b/umcs.html
@@ -1,10 +1,10 @@
 ---
 title: Unified MemoryCard Setup
 subtitle: Unified MemoryCard Setup
-layout: umcslist-category
+layout: umslist-category
 show_sidebar: false
 hide_hero: true
-sort: umcs_code
+sort: ums_code
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/ps2wiki_branding-1.png?raw=true
 ---
 
