--- a/umcs.html
+++ b/umcs.html
@@ -1,7 +1,7 @@
 ---
 title: Unified MemoryCard Setup
 subtitle: Unified MemoryCard Setup
-layout: umslist-category
+layout: umcs
 show_sidebar: false
 hide_hero: true
 sort: ums_code
