--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Unified MemoryCard Setup
 subtitle: The one place to download all* PS2 Apps!
-layout: umcs-category
+layout: umcslist-category
 show_sidebar: false
 hide_hero: true
 sort: app_code
