Update and rename index.html to umcs.html

--- a/umcs.html
+++ b/umcs.html
@@ -4,7 +4,7 @@ subtitle: The one place to download all* PS2 Apps!
 layout: umcslist-category
 show_sidebar: false
 hide_hero: true
-sort: app_code
+sort: umcs_code
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/ps2wiki_branding-1.png?raw=true
 ---
 
@@ -16,5 +16,5 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
 
 <a id="APP_PSUs"> </a>
     <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="#APP-PSUs">➽ UMCS PSUs</a>
-<div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details</div><hr>
+<div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view package details</div><hr>
 <!-- <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details, press <code>⬇️ Download</code> to download</div><hr> -->
