--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 title: Save Application System Apps Archive
 subtitle: The one place to download all* PS2 Apps!
-layout: applist-category
+layout: default
 show_sidebar: false
 hide_hero: true
-sort: app_code
 image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/ps2wiki_branding-1.png?raw=true
 ---
 
@@ -14,7 +13,9 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
 <h1 style="font-size: 1.25em; text-align: center; font-weight: bold; color: #99b6b9">The one place to download all* PS2 Apps!</h1> </div>
 <div class="has-text-centered" style="margin-left: auto; margin-right: auto; width: 250px"><hr></div>
 
-<a id="APP_PSUs"> </a>
-    <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="#APP-PSUs">➽ APP PSUs</a>
-<div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details</div><hr>
-<!-- <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details, press <code>⬇️ Download</code> to download</div><hr> -->
+<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat; background-color: #323843" class="sas_header">
+    <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="/psu-categories/umcs.html">➽ UMCS</a>
+    <div style="font-size: 1em; font-weight: bold; color: white">Unified MemoryCard Setup</div><hr>
+    <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="/psu-categories/rtes.html">➽ RTEs</a>
+    <div style="font-size: 1em; font-weight: bold; color: white">Run-Time Environments Like Enceladus & AthenaEnv, allows you to run applications with the <a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/indicators-and-warnings/indicators-and-warnings">Mini-Lua & Mini-JavaScript</a> indicators</div><hr>
+</div>
