--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
 <h1 style="font-size: 1.25em; text-align: center; font-weight: bold; color: #99b6b9">The one place to download all* PS2 Apps!</h1> </div>
 <div class="has-text-centered" style="margin-left: auto; margin-right: auto; width: 250px"><hr></div>
 
-<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat; background-color: #323843" class="sas_header">
+<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat" class="sas_desc">
     <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="/psu-categories/umcs.html">➽ UMCS</a>
     <div style="font-size: 1em; font-weight: bold; color: white">Unified MemoryCard Setup</div><hr>
     <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="/psu-categories/rtes.html">➽ RTEs</a>
