--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ subtitle: The one place to download all* PS2 Apps!
 layout: default
 show_sidebar: false
 hide_hero: true
-image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/ps2wiki_branding-1.png?raw=true
+image: https://media.discordapp.net/attachments/1239112129441697875/1311333422920106014/image.png?ex=674879eb&is=6747286b&hm=27f3251595837c5ac93d097cfb0f1638cdec5858e6111e45cbd130b7b015a9fd&=&format=webp&quality=lossless
 ---
 
 </br>
