--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@ image: https://media.discordapp.net/attachments/1239112129441697875/131133342292
     <div style="font-size: 1em; font-weight: bold; color: white">It's a gaming console, what did you expect?</div><hr>
     
     <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="https://ps2wiki.github.io/sas-apps-archive/psu-categories/other.html">➽ Other</a>
-    <div style="font-size: 1em; font-weight: bold; color: white">Other PSUs which do not fit the mould</div><hr>
+    <div style="font-size: 1em; font-weight: bold; color: white">Other PSUs which do not fit the mould</div>
 </div>
