--- a/psu-categories/rtes.html
+++ b/psu-categories/rtes.html
@@ -15,6 +15,6 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
 <div class="has-text-centered" style="margin-left: auto; margin-right: auto; width: 250px"><hr></div>
 
 <a id="APP_PSUs"> </a>
-    <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline"href="#APP-PSUs">➽ RTE PSUs</a>
+    <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline">➽ RTE PSUs</a>
 <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view RTE details</div><hr>
 <!-- <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details, press <code>⬇️ Download</code> to download</div><hr> -->
