--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -6,7 +6,7 @@ description: >-
 developer: (Read Desc.)
 hide_hero: true
 app_code: APL003-001-01
-layout: applist-multi
+layout: applist-multi-ver
 image: https://1.bp.blogspot.com/-klcXIffn49o/VxsqPxRLK2I/AAAAAAAAAxI/U8JYVkV1T7Q6XqW9v2OVb7-EwRrAmhnIQCLcB/s1600/opl%2Blogo%2Bblack%2B1.jpg
 version: v1.2.0-Beta-builds (various)
 features:
@@ -17,18 +17,6 @@ features:
     - label: Highly popular
       icon: fa-chart-line
 rating: 5
-
-#1
-name_download_1: Grimdoomer's Fork
-download_1: https://
-
-#2
-name_download_2: ⚠️ Daily Builds ⚠️
-download_2: https://app.filen.io/#/d/3907a52b-65f9-49d1-b545-b35d86009108#xhwZrYW5Gn6S6sYRQtwXDk8VGGBd5D1o
-
-#3
-name_download_3: GameID Fork
-download_3: https://app.filen.io/#/d/79b254ad-c4ab-456c-9708-44e076edbeb4#1kGrXHLES1T6mMuF8tqWKvGSc6szuA7B
 ---
 
 <h3 style="color: #fc564a">Use of OPL forks is <strong>strongly DISCOURAGED</strong>. Most of these are redundant and their features can be found in mainline OPL. Only use forks for testing purposes.</h3> 
@@ -36,6 +24,10 @@ download_3: https://app.filen.io/#/d/79b254ad-c4ab-456c-9708-44e076edbeb4#1kGrXH
 Note: Forks listed here DO NOT come with any support/warranty. Use them at <strong>Your Own Risk</strong>.
 </br></br>
 <h4>Credits:</h4> <ol>
+
+<li>OPL Game ID Fork by qnox, El_isra, bbsan & 8BitMods Crew
+    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/grimdoomer/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
+</li>
     
 <li>OPL Grimdoomer's Fork by Grimdoomer  
     <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/grimdoomer/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
@@ -44,9 +36,5 @@ Note: Forks listed here DO NOT come with any support/warranty. Use them at <stro
 <li>OPL Daily Builds by JayJay  
     <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/Jay-Jay-OPL/OPL-Daily-Builds"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div>
     Note: This build has a known bug, using it might corrupt your PS1 VMC and cause you to lose all your in-game progress. </br></br> 
-</li>
-
-<li>OPL Game ID Fork by qnox, El_isra, bbsan & 8BitMods Crew
-    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/grimdoomer/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
 </li>
 </ol>
