--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -26,14 +26,18 @@ Note: Forks listed here DO NOT come with any support/warranty. Use them at <stro
 <h4>Credits:</h4> <ol>
 
 <li>OPL Game ID Fork by qnox, El_isra, bbsan & 8BitMods Crew
-    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/grimdoomer/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
+    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/ps2homebrew/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
 </li>
     
 <li>OPL Grimdoomer's Fork by Grimdoomer  
     <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/grimdoomer/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
 </li>
 
-<li>OPL Daily Builds by JayJay  
+<li>OPL KrahJohlito's Fork by KrahJohlito
+    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/KrahJohlito/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
+</li>
+    
+<li>OPL 10th Anniversary Daily Builds by JayJay  
     <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/Jay-Jay-OPL/OPL-Daily-Builds"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div>
     Note: This build has a known bug, using it might corrupt your PS1 VMC and cause you to lose all your in-game progress. </br></br> 
 </li>
