--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -26,8 +26,8 @@ Note: Forks listed here DO NOT come with any support/warranty. Use them at <stro
 <h4>Credits:</h4> <ol>
 
 <li>OPL Game ID Fork by qnox, El_isra, bbsan & 8BitMods Crew
-    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/ps2homebrew/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div>
-    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://install.appcenter.ms/orgs/beta-ucu9/apps/opl-with-gameid/distribution_groups/public"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
+    <div><a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://github.com/ps2homebrew/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></br>  
+    <a class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://install.appcenter.ms/orgs/beta-ucu9/apps/opl-with-gameid/distribution_groups/public"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></div></br>
 </li>
     
 <li>OPL Grimdoomer's Fork by Grimdoomer  
