--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -27,7 +27,7 @@ Note: Forks listed here DO NOT come with any support/warranty. Use them at <stro
 
 <li>OPL Game ID Fork by qnox, El_isra, bbsan & 8BitMods Crew
     <div><button class="project_btn" style="margin-right: 5px; padding: 3.5px; font-size: 10px" href="https://github.com/ps2homebrew/Open-PS2-Loader"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button>
-    <div><button class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://install.appcenter.ms/orgs/beta-ucu9/apps/opl-with-gameid/distribution_groups/public"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button></div></br>
+    <button class="project_btn" style="padding: 3.5px; font-size: 10px" href="https://install.appcenter.ms/orgs/beta-ucu9/apps/opl-with-gameid/distribution_groups/public"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button></div></br>
 </li>
     
 <li>OPL Grimdoomer's Fork by Grimdoomer  
