--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ subtitle: The one place to download all* PS2 Apps!
 layout: default
 show_sidebar: false
 hide_hero: true
-image: https://media.discordapp.net/attachments/1239112129441697875/1311333422920106014/image.png?ex=674879eb&is=6747286b&hm=27f3251595837c5ac93d097cfb0f1638cdec5858e6111e45cbd130b7b015a9fd&=&format=webp&quality=lossless
+image: https://media.discordapp.net/attachments/1255864751444070422/1311194106432585769/faZ2Qsym.png?ex=674949ab&is=6747f82b&hm=8883ea0d81cbd4c116e8324f1e207089e2cc1076e77ba23c2ab6f98cbcb83e53&=&format=webp&quality=lossless&width=621&height=468
 ---
 
 </br>
