--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -171,7 +171,6 @@ rating: 5
     </script></br></div>
   
 <div style="align-self: center">
-{% if page.visit_project %}
 <script>
     function project_link() {
       var bits = ["https://"];
@@ -182,9 +181,8 @@ rating: 5
     project_link();
 </script>
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
-                {% endif %}</div></div>
+                </div></div>
             
-        {% endif %}
     </br></div></div>
     
 <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="app_desc">
