--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -170,7 +170,7 @@ rating: 5
         }
     </script></br></div>
   
-<div style="align-self: center">
+<div style="flow: left; align-self: center">
 <script>
     function project_link() {
       var bits = ["https://"];
