--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -30,12 +30,12 @@ rating: 5
         <option value="dailybuilds">⚠️ 10th Anniversary</option>
         </select></div></br>
 
-        <div><select style="margin-right: 10px" class="download_btn" id="secondMenu">
+        <div><select style="flow: left; margin-right: 10px" class="download_btn" id="secondMenu">
             <option value="">Select Version</option>
         </select></div></br>
 
     <!-- Download -->
-    <div>
+    <div style="flow: left">
     <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
     
