--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -35,7 +35,7 @@ rating: 5
         </select></div></br>
 
     <!-- Download -->
-    <div style="flow: left">
+    <div style="flow: left; margin-right: 10px">
     <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
     
@@ -170,7 +170,6 @@ rating: 5
         }
     </script></br></div>
   
-<div style="flow: left; align-self: center">
 <script>
     function project_link() {
       var bits = ["https://"];
@@ -180,6 +179,7 @@ rating: 5
     }
     project_link();
 </script>
+<div style="flow: left; align-self: center">
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
                 </div></div>
             
