--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -34,7 +34,7 @@ rating: 5
             <option value="">Select Version</option>
         </select></div></br>
 
-    <!-- Download -->
+    <!-- Download --><div style="display: flex">
     <div style="flow: left; margin-right: 10px">
     <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
@@ -183,7 +183,7 @@ rating: 5
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
                 </div></div>
             
-    </br></div></div>
+    </br></div></div></div>
     
 <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="app_desc">
     <div style="font-weight: bold" class="column is-12">
