--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -17,6 +17,7 @@ features:
     - label: Highly popular
       icon: fa-chart-line
 rating: 5
+visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
 ---
 
 <div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
