--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -179,14 +179,14 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
       document.getElementById("vplink").setAttribute("href",url);
     }
     project_link();
-</script>
+</script></br>
 {% if page.visit_project %}
 <div style="flow: left; align-self: center">
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
 </div>{% endif %}
 </div>
             
-    </br></div></div></div>
+</br></div></div></div>
     
 <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="app_desc">
     <div style="font-weight: bold" class="column is-12">
