--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -182,7 +182,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
     project_link();
 </script></br>
 {% if page.visit_project %}
-<div style="flow: left">
+<div style="flow: left; align-self: left">
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
 </div>{% endif %}
 </div>
