--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -37,7 +37,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         </select></div></br>
 
     <!-- Download -->
-    <div style="flow: left; margin-right: 10px">
+    <div style="flow: left">
     <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
     
@@ -180,9 +180,9 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
       document.getElementById("vplink").setAttribute("href",url);
     }
     project_link();
-</script></br>
+</script></br></br>
 {% if page.visit_project %}
-<div style="flow: left; align-self: left">
+<div style="flow: left">
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
 </div>{% endif %}
 </div>
