--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -170,7 +170,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                 alert('Please select fork and version before proceeding!');
             }
         }
-    </script></br></div>
+    </script></br>
   
 <script>
     function project_link() {
@@ -185,7 +185,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
 <div style="flow: left">
 <a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
 </div>{% endif %}
-</div>
+</div></div>
             
 </br></div></div></div>
     
