--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -36,7 +36,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         </select></div></br>
 
     <!-- Download -->
-    <div style="flow: left">
+    <div style="flow: left; margin-right: 10px">
     <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
     
