--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -173,7 +173,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
   
 <script>
     function project_link() {
-      var bits = ["https://"];
+      var bits = [""];
       bits.push("{{ page.visit_project }}");
       var url = bits.join("");
       document.getElementById("vplink").setAttribute("href",url);
