--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -182,7 +182,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
 </script>
 {% if page.visit_project %}
 <div style="flow: left">
-<a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
+<a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit OG Project</a>
 </div>{% endif %}
 </div>
             
