--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@ image: https://media.discordapp.net/attachments/1255864751444070422/131119410643
     <div style="font-size: 1em; font-weight: bold; color: white">Other PSUs which do not fit the mould</div>
 </div></br>
 <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat" class="sas_desc">
-    <div style="font-size: 1em; font-weight: bold; color: white"><strong>Note:</strong> All Apps are a property of their respective Developer(s). For more deatils read the <a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/index.html#Credits">credits</a> and the  <code>Meta</code>  file within the respective SAS-Compliant Program's Folder.</div>
+    <div style="font-size: 1em; color: white"><strong>Note:</strong> All Apps are a property of their respective Developer(s). For more deatils read the <a href="https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/index.html#Credits">credits</a> and the  <code>Meta</code>  file within the respective SAS-Compliant Program's Folder.</div>
 </div>
