--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -32,7 +32,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         </select></div></br>
 
         <div><select style="flow: left; margin-right: 10px" class="download_btn" id="secondMenu">
-            <option value="">Select Version</option>
+            <option value=""><del>Select Version</del></option>
         </select></div></br>
 
     <!-- Download -->
@@ -132,7 +132,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
             const secondMenu = document.getElementById('secondMenu');
             const downloadBtn = document.getElementById('downloadBtn');
 
-            secondMenu.innerHTML = '<option value="">Select version</option>';
+            secondMenu.innerHTML = '<option value="">Select Version</option>';
             downloadBtn.disabled = true;
 
             if (firstMenuValue) {
