--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -32,7 +32,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         </select></div></br>
 
         <div><select style="flow: left; margin-right: 10px" class="download_btn" id="secondMenu">
-            <option value=""><del>Select Version</del></option>
+            <option value="">𝖲̶𝖾̶𝗅̶𝖾̶𝖼̶𝗍̶ ̶𝖵̶𝖾̶𝗋̶𝗌̶𝗂̶𝗈̶𝗇̶</option>
         </select></div></br>
 
     <!-- Download -->
