--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -32,7 +32,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         </select></div></br>
 
         <div><select style="flow: left; margin-right: 10px" class="download_btn" id="secondMenu">
-            <option value=""><s>Select Version</s></option>
+            <option value="">Select Version</option>
         </select></div></br>
 
     <!-- Download -->
