--- a/_applistings/Xbox-2-PlayStation/download-8MBMCP.html
+++ b/_applistings/Xbox-2-PlayStation/download-8MBMCP.html
@@ -1,1 +1,3 @@
+<meta http-equiv="refresh" content="1; url=https://ps2wiki.github.io/sas-apps-archive/applistings/Xbox-2-PlayStation/8MBMCP.html">
+
 <div class="tenor-gif-embed" data-postid="20274792" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/pepe-peepo-clown-gif-20274792">Pepe Peepo GIF</a>from <a href="https://tenor.com/search/pepe-gifs">Pepe GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
