--- a/psu-categories/umcs.html
+++ b/psu-categories/umcs.html
@@ -18,3 +18,13 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
     <p><a style="font-size: 2em; font-weight: bold; color: white; text-decoration: underline">➽ UMCS PSUs</a>
 <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view package details</div><hr>
 <!-- <div style="font-size: 1em; font-weight: bold; color: white">Note: Click the tile to view app details, press <code>⬇️ Download</code> to download</div><hr> -->
+<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat" class="sas_desc">
+    <div style="font-size: 1em; color: white">
+        <strong>Warning: </strong> This process will completely remove any data in the following folders if they are present:
+        <ul>
+            <li>BOOT</li>
+            <li>APPS</li>
+        </ul>
+        All pre-existing configurations for PS2BBL, FMCB, uLE, wLE or others will be removed or replaced.
+        Proceed only if you understand and accept these conditions.
+    </div></div></br>
