--- a/psu-categories/umcs.html
+++ b/psu-categories/umcs.html
@@ -22,9 +22,10 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
     <div style="font-size: 1em; color: white">
         <strong>Warning: </strong> This process will completely remove any data in the following folders if they are present:
         <ul>
-            <li>BOOT</li>
-            <li>APPS</li>
+            <li>mc?:/BOOT</li>
+            <li>mc?:/APPS</li>
+            <li>mc?:/SYS-CONF</li>
         </ul>
-        All pre-existing configurations for PS2BBL, FMCB, uLE, wLE or others will be removed or replaced.
+        All pre-existing configurations for PS2BBL, Fortuna, FMCB, uLE, wLE or others will be removed or replaced.
         Proceed only if you understand and accept these conditions.
     </div></div></br>
