--- a/psu-categories/umcs.html
+++ b/psu-categories/umcs.html
@@ -21,11 +21,11 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/
 <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset wheat" class="sas_desc">
     <div style="font-size: 1em; color: white">
         <strong style="color: red">Warning: </strong> <strong>This process will completely remove any data in the following folders if they are present:
-        <ol>
+        <div style="margin-left: 20px"><ol>
             <li>mc?:/BOOT</li>
             <li>mc?:/APPS</li>
             <li>mc?:/SYS-CONF</li>
-        </ol>
+        </ol></div>
         All pre-existing configurations for PS2BBL, Fortuna, FMCB, uLE, wLE or others will be removed or replaced.
         Proceed only if you understand and accept these conditions.</strong>
     </div></div></br>
