--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -57,59 +57,59 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
             },
             
             grimdoomer: {
-                GD: {
+                Base: {
                     url: "https://app.filen.io/#/d/10ac232e-4e5a-4cf9-8e5e-39ceb78bfd60#sNqh3xcbpkfGjow3bk7oLIdBzyIgcEPP",
                     variants: ['']
                 },
-                GD02DBG: {
+                02DBG: {
                     url: "https://app.filen.io/#/d/03933c7b-1f3d-4d44-8ad0-fd72e64cc27c#MBXrdNG9v6hDcP6s7nsAgKt0ArlBXeCm",
                     variants: ['']
                 },
-                GDPADEMU: {
+                PADEMU: {
                     url: "https://app.filen.io/#/d/0d61f3fd-cb1f-4cd9-ba07-7d05a8f34c49#Nk1pxBpHjiZDmclEUDPYbZH00zD2aCb2",
                     variants: ['']
                 },
-                GDUDMAPLUS: {
+                UDMAPLUS: {
                     url: "https://app.filen.io/#/d/98a9eed9-bb94-4064-b7c9-90b762b23ba0#e3yEcHKNS7LLMTrzjafdteSZf1jl3HTG",
                     variants: ['']
                 },
-                GD03PAD: {
+                03PAD: {
                     url: "https://app.filen.io/#/d/af037fc8-c222-48a0-b00c-cf94f1c22170#UN5cAmJKgSotqJj5sfzpnxDivgkCjWMt",
                     variants: ['']
                 },
-                GD04PAD: {
+                04PAD: {
                     url: "https://app.filen.io/#/d/c748f78d-1c9f-4676-b18b-e173b31caa03#zpm3QUrhnaluz04OqXHNA5JXhwQvgNCh",
                     variants: ['']
                 },
-                GD05PAD: {
+                05PAD: {
                     url: "https://app.filen.io/#/d/b27321cb-5c6c-4faf-acca-1344139f4bb4#SGgAsrcdyDzfRaoLX2MYfsWbovSduF0y",
                     variants: ['']
                 },
-                GD06PAD: {
+                06PAD: {
                     url: "https://app.filen.io/#/d/6cf4fc10-82ed-4013-ad40-74ae223e9971#dCUjyjxEfx82O977lHyGQR7tfqie0EyO",
                     variants: ['']
                 },
-                GD06UDMAP: {
+                06UDMAP: {
                     url: "https://app.filen.io/#/d/d7591563-25b7-43f2-b0ac-5e3c404a0fed#cD3FWpLQn0MybhV1rEWKGdcDPOCCjgZv",
                     variants: ['']
                 },
-                GD1202: {
+                1202: {
                     url: "https://app.filen.io/#/d/0269d8d7-049e-4ae9-b6d1-fe63687ac63e#PjbdByPcPXUU9ZWgbkZ45YPqHWSQfUzk",
                     variants: ['']
                 },
-                GD1203: {
+                1203: {
                     url: "https://app.filen.io/#/d/7586daf7-19e9-45af-a91e-598b618eb661#pCSG1froHHEcgBDJ2UFXohHzNSXQABgV",
                     variants: ['']
                 },
-                GD1204: {
+                1204: {
                     url: "https://app.filen.io/#/d/5bc186ff-9167-4bb5-b64f-4691a2d56d22#8DmXXckap1ehBlNuadFrbOcV3SWA91re",
                     variants: ['']
                 },
-                GD1205: {
+                1205: {
                     url: "https://app.filen.io/#/d/20a378d9-7d90-4fc8-83bf-763413a9bf91#4ho4eD9YaRa9IxbyAjkJQBTqZ9KYX86a",
                     variants: ['']
                 },
-                GD1206: {
+                1206: {
                     url: "https://app.filen.io/#/d/c439a12d-d76a-4f1c-bd12-0ffa19728b35#fCGRSXWc3dFhSkKt6qWG7BraPoewWkhn",
                     variants: ['']
                 }
