--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -61,7 +61,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/10ac232e-4e5a-4cf9-8e5e-39ceb78bfd60#sNqh3xcbpkfGjow3bk7oLIdBzyIgcEPP",
                     variants: ['']
                 },
-                02DBG: {
+                GD02DBG: {
                     url: "https://app.filen.io/#/d/03933c7b-1f3d-4d44-8ad0-fd72e64cc27c#MBXrdNG9v6hDcP6s7nsAgKt0ArlBXeCm",
                     variants: ['']
                 },
@@ -73,23 +73,23 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/98a9eed9-bb94-4064-b7c9-90b762b23ba0#e3yEcHKNS7LLMTrzjafdteSZf1jl3HTG",
                     variants: ['']
                 },
-                03PAD: {
+                GD03PAD: {
                     url: "https://app.filen.io/#/d/af037fc8-c222-48a0-b00c-cf94f1c22170#UN5cAmJKgSotqJj5sfzpnxDivgkCjWMt",
                     variants: ['']
                 },
-                04PAD: {
+                GD04PAD: {
                     url: "https://app.filen.io/#/d/c748f78d-1c9f-4676-b18b-e173b31caa03#zpm3QUrhnaluz04OqXHNA5JXhwQvgNCh",
                     variants: ['']
                 },
-                05PAD: {
+                GD05PAD: {
                     url: "https://app.filen.io/#/d/b27321cb-5c6c-4faf-acca-1344139f4bb4#SGgAsrcdyDzfRaoLX2MYfsWbovSduF0y",
                     variants: ['']
                 },
-                06PAD: {
+                GD06PAD: {
                     url: "https://app.filen.io/#/d/6cf4fc10-82ed-4013-ad40-74ae223e9971#dCUjyjxEfx82O977lHyGQR7tfqie0EyO",
                     variants: ['']
                 },
-                06UDMAP: {
+                GD06UDMAP: {
                     url: "https://app.filen.io/#/d/d7591563-25b7-43f2-b0ac-5e3c404a0fed#cD3FWpLQn0MybhV1rEWKGdcDPOCCjgZv",
                     variants: ['']
                 },
