--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -61,11 +61,11 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/10ac232e-4e5a-4cf9-8e5e-39ceb78bfd60#sNqh3xcbpkfGjow3bk7oLIdBzyIgcEPP",
                     variants: ['']
                 },
-                '1.2.0.6 UDMAPlus': {
+                '1.2.0.6 UDMA Plus': {
                     url: "https://app.filen.io/#/d/d7591563-25b7-43f2-b0ac-5e3c404a0fed#cD3FWpLQn0MybhV1rEWKGdcDPOCCjgZv",
                     variants: ['']
                 },
-                '1.2.0.6 Pademu': {
+                '1.2.0.6 PADEMU': {
                     url: "https://app.filen.io/#/d/0d61f3fd-cb1f-4cd9-ba07-7d05a8f34c49#Nk1pxBpHjiZDmclEUDPYbZH00zD2aCb2",
                     variants: ['']
                 },
@@ -73,7 +73,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/20a378d9-7d90-4fc8-83bf-763413a9bf91#4ho4eD9YaRa9IxbyAjkJQBTqZ9KYX86a",
                     variants: ['']
                 },
-                '1.2.0.5 Pademu': {
+                '1.2.0.5 PADEMU': {
                     url: "https://app.filen.io/#/d/b27321cb-5c6c-4faf-acca-1344139f4bb4#SGgAsrcdyDzfRaoLX2MYfsWbovSduF0y",
                     variants: ['']
                 },
@@ -81,7 +81,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/5bc186ff-9167-4bb5-b64f-4691a2d56d22#8DmXXckap1ehBlNuadFrbOcV3SWA91re",
                     variants: ['']
                 },
-                '1.2.0.4 Pademu': {
+                '1.2.0.4 PADEMU': {
                     url: "https://app.filen.io/#/d/c748f78d-1c9f-4676-b18b-e173b31caa03#zpm3QUrhnaluz04OqXHNA5JXhwQvgNCh",
                     variants: ['']
                 },
@@ -89,7 +89,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
                     url: "https://app.filen.io/#/d/7586daf7-19e9-45af-a91e-598b618eb661#pCSG1froHHEcgBDJ2UFXohHzNSXQABgV",
                     variants: ['']
                 },
-                '1.2.0.3 Pademu': {
+                '1.2.0.3 PADEMU': {
                     url: "https://app.filen.io/#/d/af037fc8-c222-48a0-b00c-cf94f1c22170#UN5cAmJKgSotqJj5sfzpnxDivgkCjWMt",
                     variants: ['']
                 },
