--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -27,7 +27,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         <option value="">Select Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
         <option value="game_id">GameID Fork</option>
-        <option value="grimdoomer">Grimdoomer's Fork</option>
+        <option value="grimdoomer">⍟ Grimdoomer's Fork</option>
         <option value="dailybuilds">⚠️ 10th Anniversary</option>
         </select></div></br>
 
@@ -57,7 +57,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
             },
             
             grimdoomer: {
-                '1.2.0.6': {
+                '⍟ 1.2.0.6': {
                     url: "https://app.filen.io/#/d/10ac232e-4e5a-4cf9-8e5e-39ceb78bfd60#sNqh3xcbpkfGjow3bk7oLIdBzyIgcEPP",
                     variants: ['']
                 },
