--- a/_applistings/OPL/OPL-Forks/OPL-Forks.html
+++ b/_applistings/OPL/OPL-Forks/OPL-Forks.html
@@ -27,7 +27,7 @@ visit_project: https://github.com/ps2homebrew/Open-PS2-Loader
         <option value="">Select Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
         <option value="game_id">GameID Fork</option>
-        <option value="grimdoomer">⍟ Grimdoomer's Fork</option>
+        <option value="grimdoomer">Grimdoomer's Fork</option>
         <option value="dailybuilds">⚠️ 10th Anniversary</option>
         </select></div></br>
 
